fix photo overlap and scroll bar

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,10 +7,11 @@ body{
 
 .photobox{ 
     position:relative;
-    width: 100%;
+    width: 95%;
     max-width: 1500px;
     margin: auto;
     aspect-ratio: 1/1;
+   
 }
 
 .photobox img{
@@ -20,7 +21,7 @@ body{
 }
 .photobox img:hover{
     z-index:1;
-    transform: scale(1.5);
+    transform: scale(1.2);
     box-shadow: 0 0 1rem rgba(0, 0, 0, 1);
     
 }
